# Local-Deep-Research-Agent-langraph-

./: LICENSE  hello.py  pyproject.toml
deep_research/: configuration.py  graph.py  prompts.py  report_section_graph.py  reporting.py  research_steps.py  search.py  section_builder_graph.py  state.py  utils.py
deep_research/search/: exa_search.py  google.py  search_utils.py  tavily.py
