[project]
name = "langgraph-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "exa-py>=1.11.0",
    "langchain>=0.3.23",
    "langgraph>=0.3.27",
    "ollama>=0.4.7",
]
